# dbt-oracle

./: .coveragerc  .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE.txt  MANIFEST.in  Makefile  NOTICE.txt  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  dbt-test.env  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  sbom_generation.yaml  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/scripts/: create_new_user.sh  install_oracle_instantclient.sh
.github/scripts/db_setup/: 01_ALTER_USER.sql
.github/workflows/: dbt-oracle-adapter-tests.yml  macaron.yaml  oracle-18.4.0-xe-adapter-tests.yml  oracle-21.3.0-xe-adapter-tests.yml  oracle-xe-adapter-tests-windows.yml  oracle-xe-adapter-tests.yml  release.yaml  tests.yaml
dbt/: __init__.py
dbt/adapters/: __init__.py
dbt/adapters/oracle/: __init__.py  __version__.py  column.py  connection_helper.py  connections.py  impl.py  keyword_catalog.py  python_submissions.py  relation.py  sample_profiles.yml
dbt/adapters/oracle/relation_configs/: __init__.py  base.py  materialized_view.py  policies.py
dbt/include/oracle/: __init__.py  dbt_project.yml  profile_template.yml
dbt/include/oracle/macros/: adapters.sql  apply_grants.sql  catalog.sql  columns.sql  freshness.sql  schema_tests.sql  show.sql  update_legacy_snapshots.sql
dbt/include/oracle/macros/materializations/incremental/: helpers.sql  incremental.sql  strategies.sql
dbt/include/oracle/macros/materializations/materialized_view/: materialized_view.sql
dbt/include/oracle/macros/materializations/python_model/: python.sql
dbt/include/oracle/macros/materializations/seed/: seed.sql
dbt/include/oracle/macros/materializations/snapshot/: snapshot.sql  snapshot_merge.sql  strategies.sql
dbt/include/oracle/macros/materializations/table/: table.sql
dbt/include/oracle/macros/materializations/tests/: helpers.sql
dbt/include/oracle/macros/materializations/view/: view.sql
dbt/include/oracle/macros/relations/: drop.sql
dbt/include/oracle/macros/utils/: cast_bool_to_text.sql  data_types.sql  date_spine.sql  dateadd.sql  datediff.sql  datetrunc.sql  except.sql  generate_series.sql  hash.sql  last_day.sql  position.sql  right.sql  timestamps.sql
dbt_adbs_test_project/: README.md  dbt_project.yml  dbt_test.env  package-lock.yml  packages.yml  profiles.yml
dbt_adbs_test_project/analysis/: eu_customers.sql
dbt_adbs_test_project/data/: seed.csv
dbt_adbs_test_project/macros/: create_index.sql  datatypes.sql  demo_multiple_statements.sql  execute_statements.sql  generate_schema_name.sql  hash_arguments.sql  readme.md  run_results.sql
dbt_adbs_test_project/models/: direct_sales_channel_promo_cost.sql  dummy_model.sql  exposures.yml  filter_table.sql  income_levels.sql  internet_sales_channel_customers.sql  kafka.sql  label_data.sql  max_promo_costs.py  people.sql  promotion_costs.sql  promotions_cost_py_model.py  properties.yml  sales_cost.sql  sales_cost_incremental.py  sales_internet_channel.sql  sales_internet_mv.sql  sales_py.py  schema.yml  test_py_model.py  test_py_ref.py  test_py_source.py  union_customer_sales.sql  us_potential_customers.py  us_product_delete_insert.sql  us_product_delete_insert_append.sql  us_product_sales_channel_ranking.sql  us_product_sales_channel_ranking_append.sql  us_seed_customers.sql
dbt_adbs_test_project/models/demo/: microbatch_events.sql  microbatch_events_incremental.sql  promotion_costs_for_direct_sales_channel.sql  promotion_costs_for_direct_sales_channel_incr_insert.sql  promotion_costs_for_direct_sales_channel_incr_merge.sql  promotion_costs_for_direct_sales_channel_incr_merge_unique_keys.sql
dbt_adbs_test_project/models/eu/: countries.sql  eu_direct_sales_channels_promo_costs.sql
dbt_adbs_test_project/models/property/: property_data_product.sql  schema.yml
dbt_adbs_test_project/seeds/: kafka_message.csv  label_table.csv  mortgage_application_seed.csv  property_data_seed.csv  seed_with_empty_col.csv
dbt_adbs_test_project/snapshots/: README.md  customer_details.sql  dummy_table.sql  label_data_snapshot.sql  promotion_costs.sql
dbt_adbs_test_project/test/: test_count_employees.sql
doc/: requirements.txt
doc/source/: conf.py  index.rst  license.rst  release_notes.rst
doc/source/user_guide/: connection.rst  installation.rst  introduction.rst
myenv_dbt/: pip-selfcheck.json
tests/: README.md  __init__.py  conftest.py  oracle.dbtspec  oracle_py36.dbtspec  test_config.py
tests/functional/adapter/: test_basic.py  test_caching.py  test_concurrency.py  test_config.py  test_data_types.py  test_dbt_show.py  test_docs_generate.py  test_docs_genreferences.py  test_ephemeral.py  test_generictests_where.py  test_get_last_relation_modified.py  test_grants.py  test_quoted_columns.py  test_quoted_relations.py
tests/functional/adapter/constraints/: fixtures.py  test_constraints.py
tests/functional/adapter/incremental_materialization/: test_incremental_microbatch.py  test_incremental_predicates.py  test_merge_update_columns.py  test_partition_config.py  test_quotes_with_merge_update_columns.py  test_temp_relation_cleanup.py  test_unique_id.py
tests/functional/adapter/incremental_materialization/quotes/: test_quote_special_characters_and_keywords.py  test_quoted_columns_incremental_insert.py  test_quotes_enabled_in_model.py
tests/functional/adapter/incremental_materialization/sync_schema/: test_quote_special_characters_and_keywords.py
tests/functional/adapter/macros/: test_alter_column_type.py
tests/functional/adapter/materialized_view/: test_materialized_view.py  utils.py
tests/functional/adapter/simple_seed/: __init__.py  test_simple_seed.py
tests/functional/adapter/snapshots/: test_invalidate_deletes.py
tests/functional/adapter/utils/: test_common_utils.py  test_date_spine.py  test_dateutils.py  test_generate_series.py
