[metadata]
name = dbt-oracle
version = 1.7.0
description = dbt (data build tool) adapter for Oracle Autonomous Database
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Oracle dbt
author = Oracle
license = Apache Software License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

# Map or URL names to links
# Github, PyPI and documentations urls should be added below
project_urls =
    Documentation = https://docs.getdbt.com/reference/warehouse-profiles/oracle-profile
    Source = https://github.com/oracle/dbt-oracle
    Bug Tracker = https://github.com/oracle/dbt-oracle/issues
    CI = https://github.com/oracle/dbt-oracle/actions
    Release Notes = https://github.com/oracle/dbt-oracle/releases

[options]
python_requires = >=3.8
zip_safe = False
packages = find_namespace:
include_package_data = True
install_requires =
    dbt-core~=1.7,<1.8
    cx_Oracle==8.3.0
    oracledb==1.4.2
test_suite=tests
test_requires =
    dbt-tests-adapter~=1.7,<1.8
    pytest
scripts =
    bin/create-pem-from-p12

[options.packages.find]
include =
    dbt
    dbt.*
