[metadata]
name = dbt-oracle
version = 1.9.2
description = dbt (data build tool) adapter for Oracle Autonomous Database
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Oracle dbt
author = Oracle
license = Apache Software License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

# Map or URL names to links
# Github, PyPI and documentations urls should be added below
project_urls =
    Documentation = https://docs.getdbt.com/reference/warehouse-profiles/oracle-profile
    Source = https://github.com/oracle/dbt-oracle
    Bug Tracker = https://github.com/oracle/dbt-oracle/issues
    CI = https://github.com/oracle/dbt-oracle/actions
    Release Notes = https://github.com/oracle/dbt-oracle/releases

[options]
python_requires = >=3.9
zip_safe = False
packages = find_namespace:
include_package_data = True
install_requires =
    dbt-common>=1.1.0,<2.0
    dbt-adapters>=1.2.1,<2.0
    dbt-core~=1.9,<1.10
    oracledb==3.1.0
test_suite=tests
test_requires =
    dbt-tests-adapter~=1.10,<1.11
    pytest
scripts =
    bin/create-pem-from-p12

[options.packages.find]
include =
    dbt
    dbt.*
